-----------------

.. important:: Removal of Support for {+mdb-server+} 3.6

   {+driver-short+} v5.2 removes support for {+mdb-server+} 3.6. To
   learn more about compatible versions of the server, see
   :ref:`java-rs-compatibility`.

The 5.2 driver release includes the following changes, fixes,
and features:

.. sharedinclude:: dbx/jvm/v5.2-wn-items.rst

   .. replacement:: avs-index-link

      the `SearchIndexModel <{+api+}/mongodb-driver-core/com/mongodb/client/model/SearchIndexModel.html>`__
      API documentation

   .. replacement:: encrypt-link

      the :ref:`In-Use Encryption <javars-encrypt>` guide

   .. replacement:: vector-search-link

      the :atlas:`Atlas Vector Search Quick Start
      </atlas-vector-search/tutorials/vector-search-quick-start/>`

.. _javars-version-5.1.3:

What's New in 5.1.3
-------------------

The 5.1.3 driver patch release includes the following changes:

.. sharedinclude:: dbx/jvm/v5.1.3-wn-items.rst

.. _javars-version-5.1.2:

What's New in 5.1.2
-------------------

The 5.1.2 driver patch release includes the following changes:

- Fixes an issue that prevents the driver from encoding and
  decoding concrete classes that extend generic base classes, in cases
  that you specify the base class as the generic type of the ``MongoCollection`` instance.

.. _javars-version-5.1.1:

What's New in 5.1.1
-------------------

The 5.1.1 driver patch release includes the following changes:

- When using the ``MONGODB-OIDC`` authentication mechanism, you must not
  include comma characters in the ``authMechanismProperties`` connection
  string value.

.. _javars-version-5.1:

What's New in 5.1
-----------------

.. important:: MongoDB Server v3.6 End-of-Life

   Support for MongoDB Server v3.6 is deprecated in this
   release and will be removed in the v5.2 release of the driver.

To learn about other changes introduced in v5.1, see the :driver:`What's
New </java/sync/current/whats-new/>` guide in the Java Sync Driver documentation.