@@ -143,9 +143,14 @@ Connection Configuration
        | **Default**: ``null``
        | **Connection URI Example**: ``maxLifeTimeMS=6000``
 
-   * - **socketTimeoutMS**
-     - | Sets the number of milliseconds a recieve on a socket can take before timing out. If an
-       | operation doesn't finish in the specified time, the {+driver-short+} raises a timeout exception.
+   * - **socketTimeoutMS** *(deprecated)*
+     - | This option is deprecated. You can configure this timeout by
+       | setting the the :ref:`client-level timeout <javars-csot>`
+       | instead.
+       |
+       | Milliseconds a recieve on a socket can take
+       | before timing out. If an operation doesn't finish in the
+       | specified time, the {+driver-short+} raises a timeout exception.
        |
        | **Data Type**: ``Integer``
        | **Default**: ``null``
@@ -206,6 +211,11 @@ Connection Pool Configuration
 
    * - **maxPoolSize**
      - | Sets the maximum number of connections in the connection pool.
+         If an operation needs a new connection while the connection pool has
+         ``maxPoolSize`` connections open, the new operation waits for a
+         new connection to open. To limit this waiting time, use the
+         single timeout setting. To learn more, see the
+         :ref:`javars-csot` guide.
        |
        | **Data Type**: ``Integer``
        | **Default**: ``null``
@@ -218,8 +228,12 @@ Connection Pool Configuration
        | **Default**: ``null``
        | **Connection URI Example**: ``minPoolSize=3``
 
-   * - **waitQueueTimeoutMS**
-     - | Sets the maximum amount of time to wait in milliseconds before either
+   * - **waitQueueTimeoutMS** *(deprecated)*
+     - | This option is deprecated. You can configure this timeout by
+       | setting the the :ref:`client-level timeout <javars-csot>`
+       | instead.
+       |
+       | Maximum amount of time to wait in milliseconds before either
        | an in-use connection becomes available or a connection is created and
        | starts becoming established.
        |
@@ -520,8 +534,12 @@ Write Concern Configuration
        | **Default**: ``null``
        | **Connection URI Example**: ``w=60``
 
-   * - **wtimeoutMS**
-     - | If set, The driver adds ``{ wtimeout : ms }`` to all write commands. If
+   * - **wtimeoutMS** *(deprecated)*
+     - | This option is deprecated. You can configure this timeout by
+       | setting the the :ref:`client-level timeout <javars-csot>`
+       | instead.
+       |
+       | If set, The driver adds ``{ wtimeout : ms }`` to all write commands. If
        | set, implies ``safe=true``. This option is used in combination with ``w``.
        |
        | **Data Type**: ``Integer``
