@@ -56,6 +56,10 @@ and features:
       the :atlas:`Atlas Vector Search Quick Start
       </atlas-vector-search/tutorials/vector-search-quick-start/>`
 
+   .. replacement:: csot-link
+
+      the :ref:`java-rs-csot` guide
+
 .. _javars-version-5.1.3:
 
 What's New in 5.1.3
@@ -98,4 +102,5 @@ What's New in 5.1
    release and will be removed in the v5.2 release of the driver.
 
 To learn about other changes introduced in v5.1, see the :driver:`What's
-New </java/sync/current/whats-new/>` guide in the Java Sync Driver documentation.
+New </java/sync/current/whats-new/>` guide in the Java Sync Driver
+documentation.
